name:                wingsuit
version:             0.0.0.0
build-type:          Simple
cabal-version:       >=1.10

executable wingsuit
  hs-source-dirs:      src
  main-is:             Main.hs
  ghc-options:         -O2 -Wall
  build-depends:       base >=4.10.1 && <4.11
                     , containers >=0.5.10 && <0.6
                     , gloss >=1.11.1 && <1.12
                     , lens >=4.16.1 && <4.17
                     , JuicyPixels
                     , gloss-juicy
  default-language:    Haskell2010
  other-modules:       Base
                     , Block
                     , Button
                     , Game
                     , Hud
                     , Level
                     , Level.Image
                     , Levels
                     , Levels.Image
                     , Menu
                     , Player
                     , Scores
                     , World
