name:                wingsuit
version:             0.0.0.0
build-type:          Simple
cabal-version:       >=1.10

executable wingsuit
  hs-source-dirs:      src
  main-is:             Main.hs
  ghc-options:         -O2 -Wall -threaded
  build-depends:       aeson >=1.2.4 && <1.3
                     , base >=4.10.1 && <4.11
                     , bytestring >=0.10.8 && <0.11
                     , containers >=0.5.10 && <0.6
                     , gloss >=1.11.1 && <1.12
                     , lens >=4.16.1 && <4.17
                     , sdl2 >=2.4 && <2.5
                     , SDL-mixer >=0.6.2 && <0.7
                     , JuicyPixels
                     , gloss-juicy
                     , random >=1.1 && <1.2
                     , stm
  default-language:    Haskell2010
  other-modules:       Acorn
                     , Audio
                     , Base
                     , Block
                     , Button
                     , Camera
                     , Credits
                     , FinishHud
                     , Game
                     , Hud
                     , Log
                     , Image
                     , ImageButton
                     , ImageLevel
                     , Level
                     , Levels
                     , Menu
                     , Parallax
                     , PauseMenu
                     , Player
                     , Scores
                     , World
